Thu Nov 13 12:11:18 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* rb_w32_fstat{,i64}: speed up.  adjuting timestamps in this function
	  is to get rid of the side effect of ENV["TZ"].  then, if ENV["TZ"] is
	  not set, no need to adjust.  this change makes File#stat about 60%
	  faster.

Thu Nov 13 11:56:12 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c: include "internal.h" for STATIC_ASSERT.

Thu Nov 13 03:56:38 2014  Eric Wong  <e@80x24.org>

	* gc.c (struct heap_page): trivial packing
	  304 => 296 bytes on x86-64

Wed Nov 12 22:50:12 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gems/bundled_gems: Update to test-unit 3.0.6 and minitest 5.4.3.

Wed Nov 12 22:30:52 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/*: Update to RubyGems 2.4.3 master (7b1f684).

Wed Nov 12 00:26:37 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_object.rb: Specify an exception class for rescue clause.

	* test/dbm/test_dbm.rb: Ditto.

	* test/gdbm/test_gdbm.rb: Ditto.

	* test/sdbm/test_sdbm.rb: Ditto.

Tue Nov 11 23:43:51 2014  Tanaka Akira  <akr@fsij.org>

	* test/fileutils/test_fileutils.rb: Use assert_join_threads.

Tue Nov 11 22:51:14 2014  Tanaka Akira  <akr@fsij.org>

	* test/resolv/test_dns.rb: Use assert_join_threads.

Tue Nov 11 22:33:08 2014  Tanaka Akira  <akr@fsij.org>

	* test/net/pop/test_pop.rb: Use assert_join_threads.

Tue Nov 11 22:07:20 2014  Tanaka Akira  <akr@fsij.org>

	* test/net/http/test_https_proxy.rb: Use assert_join_threads.

Tue Nov 11 18:09:11 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/prelude.c.tmpl: move from tool/compile_prelude.rb and
	  expand by generic_erb.rb.

Tue Nov 11 13:01:31 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rubygems/commands/contents_command.rb (files_in_default_gem):
	  remove useless sort. show_files will sort the result and
	  another branch, files_in_gem, doesn't sort.
	  it should be removed for consistency.
