@@ -1,3 +1,8 @@
+Thu Nov 13 18:10:38 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm.c (rb_vm_make_proc_lambda): similar to rb_vm_make_proc() with
+	  is_lambda argument.
+
 Thu Nov 13 12:11:18 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* rb_w32_fstat{,i64}: speed up.  adjuting timestamps in this function
